# contextforge

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE
.claude/: settings.local.json
src/: error.rs  lib.rs  main.rs  server.rs
src/code_intel/: git.rs  languages.rs  mod.rs  parser.rs
src/embeddings/: mod.rs
src/storage/: local.rs  mod.rs  schema.rs
src/tools/: code_scan.rs  context.rs  memory_context.rs  memory_forget.rs  memory_inspect.rs  memory_save.rs  memory_search.rs  memory_session.rs  memory_update.rs  mod.rs  recall.rs  remember.rs  scan.rs
