[package]
name = "contextforge"
version = "0.1.0"
edition = "2024"
description = "Persistent semantic memory for AI coding assistants — MCP server"
authors = ["Cesar Moreno <cesar@cesarmoreno.dev>"]
license = "MIT"
repository = "https://github.com/cesarmoreno/contextforge"
keywords = ["mcp", "ai", "memory", "embeddings", "coding-assistant"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
libsql = { version = "0.9", default-features = false, features = ["core"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
